PR/45759: Khanh-Dang Nguyen Thu Lam: slattach(8) is not compatible with pseudo-terminals. Fixed by ignoring the error for the DTR ioctl.